yaml/traefik_middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: guestbook-dev
spec:
  redirectScheme:
    scheme: https
    permanent: true
